// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`The optimism memory clients that are running in normal mode with a normal state manager should successfully deep clone state when running a call with `createTransaction=false` 1`] = `
{
  "createdAddresses":   Set {},
  "data": undefined,
  "executionGasUsed": 25588n,
  "gas": 16751627n,
  "logs": [],
  "rawData": "0x",
  "selfdestruct":   Set {},
}
`;

exports[`The optimism memory clients that are running in normal mode with a normal state manager should successfully deep clone state when running a call with `createTransaction=false` 2`] = `
{
  "createdAddresses":   Set {},
  "data": true,
  "executionGasUsed": 2377n,
  "gas": 16774838n,
  "logs": [],
  "rawData": "0x0000000000000000000000000000000000000000000000000000000000000001",
  "selfdestruct":   Set {},
}
`;

exports[`The optimism memory clients that are running in normal mode with a normal state manager should successfully deep clone state when running a call with `createTransaction=false` 3`] = `
{
  "createdAddresses":   Set {},
  "data": true,
  "executionGasUsed": 377n,
  "gas": 16776838n,
  "logs": [],
  "rawData": "0x0000000000000000000000000000000000000000000000000000000000000001",
  "selfdestruct":   Set {},
}
`;
